Integrate kotty-miow Rust lib with JVM using FFM API